# photosinfo

./: .gitignore  pyproject.toml
photosinfo/: __init__.py  database.py  helper.py  model.py  photosinfo.py  script.py
tests/: test_photosinfo.py
