[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "photosinfo"
authors = [{name = "BaoHengtao", email = "baohengtao@users.noreply.github.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies=[
    "osxphotos","photoscript"
]

[project.urls]
Home = "https://github.com/baohengtao/photosinfo"

[project.scripts]
photosinfo='photosinfo.script:app'

